--- a/pages/bio.html
+++ b/pages/bio.html
@@ -24,7 +24,7 @@
         <a class="hiper" href="contacto.html">Contacto</a>
     </header>
 
-    <img class="imagen1" src="../FOTOS/1.jpg" alt="">
+    <img class="imagen1" src="./FOTOS/1.jpg" alt="">
     <img class="imagen2" src="../FOTOS/2.jpg" alt="">
     <img class="imagen3" src="../FOTOS/3.jpg" alt="">
     <img class="imagen4" src="../FOTOS/4.jpg" alt="">
